--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
                       aria-controls="accordion-panel-1"
                       aria-expanded="false">
                 <span class="accordion__header-text">What is Frontend Mentor, and how will it help me?</span>
-                <div class="accordion__icon" aria-hidden="true"></div>
+                <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
             <section class="accordion__panel"
                      id="accordion-panel-1"
                      aria-labelledby="accordion-header-1"
-                     aria-hidden="true"
-                     inert>
+                     aria-hidden="true">
               <p class="accordion__panel-text">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.</p>
             </section>
           </div>
@@ -45,14 +44,13 @@
                       aria-controls="accordion-panel-2"
                       aria-expanded="false">
                 <span class="accordion__header-text">Is Frontend Mentor free?</span>
-                <div class="accordion__icon" aria-hidden="true"></div>
+                <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
             <section class="accordion__panel"
                      id="accordion-panel-2"
                      aria-labelledby="accordion-header-2"
-                     aria-hidden="true"
-                     inert>
+                     aria-hidden="true">
               <p class="accordion__panel-text">The majority of our challenges are free, yes. We do have some that are premium and require a Pro subscription to access. It will say on each challenge whether they are free or premium, so it's easy to tell the difference.</p>
             </section>
           </div>
@@ -64,14 +62,13 @@
                       aria-controls="accordion-panel-3"
                       aria-expanded="false">
                 <span class="accordion__header-text">Can I use Frontend Mentor projects in my portfolio?</span>
-                <div class="accordion__icon" aria-hidden="true"></div>
+                <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
             <section class="accordion__panel"
                      id="accordion-panel-3"
                      aria-labelledby="accordion-header-3"
-                     aria-hidden="true"
-                     inert>
+                     aria-hidden="true">
               <p class="accordion__panel-text">Your "Mentor Score" is a rough gauge of your reputation on the platform. Earning more points can boost your exposure within the community and get you on the Wall of Fame. Click "Learn about our Wall of Fame" on the Wall of Fame for all the information.</p>
             </section>
           </div>
@@ -83,14 +80,13 @@
                       aria-controls="accordion-panel-4"
                       aria-expanded="false">
                 <span class="accordion__header-text">How can I get help if I'm stuck on a challenge?</span>
-                <div class="accordion__icon" aria-hidden="true"></div>
+                <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
             <section class="accordion__panel"
                      id="accordion-panel-4"
                      aria-labelledby="accordion-header-4"
-                     aria-hidden="true"
-                     inert>
+                     aria-hidden="true">
               <p class="accordion__panel-text">The best (and quickest) way to get help on a challenge is in our Discord server. There are thousands of other developers in there, so it's a great place to ask questions. We even have a dedicated "help" channel! If you haven't joined yet, you can get an invite to our Discord server here.</p>
             </section>
           </div>
