--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                      id="accordion-panel-1"
                      aria-labelledby="accordion-header-1"
                      aria-hidden="true">
-              <p class="accordion__panel-text">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal <br>for portfolio building.</p>
+              <p class="accordion__panel-text">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for <br>portfolio building.</p>
             </section>
           </div>
 
