--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                       id="accordion-header-1"
                       aria-controls="accordion-panel-1"
                       aria-expanded="false">
-                <span class="accordion__header-text">What is Frontend Mentor, and how will it help me?</span>
+                <span class="accordion__header-text">How do viruses and trojans differ?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
@@ -33,7 +33,7 @@
                      id="accordion-panel-1"
                      aria-labelledby="accordion-header-1"
                      aria-hidden="true">
-              <p class="accordion__panel-text">Frontend Mentor offers realistic coding challenges to help developers improve their frontend coding skills with projects in HTML, CSS, and JavaScript. It’s suitable for all levels and ideal for portfolio building.</p>
+              <p class="accordion__panel-text">A virus is a malicious program that can replicate itself and spread to other computers, often causing damage to files and systems. On the other hand, a trojan disguises itself as a legitimate program to trick you into downloading it.</p>
             </section>
           </div>
 
@@ -43,7 +43,7 @@
                       id="accordion-header-2"
                       aria-controls="accordion-panel-2"
                       aria-expanded="false">
-                <span class="accordion__header-text">Is Frontend Mentor free?</span>
+                <span class="accordion__header-text">How do I protect my computer from malware?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
@@ -51,7 +51,7 @@
                      id="accordion-panel-2"
                      aria-labelledby="accordion-header-2"
                      aria-hidden="true">
-              <p class="accordion__panel-text">The majority of our challenges are free, yes. We do have some that are premium and require a Pro subscription to access. It will say on each challenge whether they are free or premium, so it's easy to tell the difference.</p>
+              <p class="accordion__panel-text">Protection involves installing and regularly updating antivirus software, being cautious when downloading files or clicking on links, keeping all software up to date, and using strong passwords and two-factor authentication to protect your accounts.</p>
             </section>
           </div>
 
@@ -61,7 +61,7 @@
                       id="accordion-header-3"
                       aria-controls="accordion-panel-3"
                       aria-expanded="false">
-                <span class="accordion__header-text">Can I use Frontend Mentor projects in my portfolio?</span>
+                <span class="accordion__header-text">Can I recover deleted files from my computer?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
@@ -69,7 +69,7 @@
                      id="accordion-panel-3"
                      aria-labelledby="accordion-header-3"
                      aria-hidden="true">
-              <p class="accordion__panel-text">Your "Mentor Score" is a rough gauge of your reputation on the platform. Earning more points can boost your exposure within the community and get you on the Wall of Fame. Click "Learn about our Wall of Fame" on the Wall of Fame for all the information.</p>
+              <p class="accordion__panel-text">It depends on how the files were deleted. If they were simply deleted from the recycle bin, they may be recoverable with file recovery software.</p>
             </section>
           </div>
 
@@ -79,7 +79,7 @@
                       id="accordion-header-4"
                       aria-controls="accordion-panel-4"
                       aria-expanded="false">
-                <span class="accordion__header-text">How can I get help if I'm stuck on a challenge?</span>
+                <span class="accordion__header-text">What is phishing and how can I avoid it?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h3>
@@ -87,7 +87,7 @@
                      id="accordion-panel-4"
                      aria-labelledby="accordion-header-4"
                      aria-hidden="true">
-              <p class="accordion__panel-text">The best (and quickest) way to get help on a challenge is in our Discord server. There are thousands of other developers in there, so it's a great place to ask questions. We even have a dedicated "help" channel! If you haven't joined yet, you can get an invite to our Discord server here.</p>
+              <p class="accordion__panel-text">Phishing is a scam where attackers try to trick you into giving them sensitive information. To avoid it, double-check sender's email address, look for errors in the message, never click on unknown links or download attachments, and use strong passwords and two-factor authentication.</p>
             </section>
           </div>
 
