--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <title>FAQs</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
           <h1 class="accordion__title">FAQs</h1>
 
           <div class="accordion__item">
-            <h3 class="accordion__header-container">
+            <h2 class="accordion__header-container">
               <button class="accordion__header"
                       id="accordion-header-1"
                       aria-controls="accordion-panel-1"
@@ -28,7 +28,7 @@
                 <span class="accordion__header-text">How do viruses and trojans differ?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
-            </h3>
+            </h2>
             <section class="accordion__panel"
                      id="accordion-panel-1"
                      aria-labelledby="accordion-header-1"
@@ -38,7 +38,7 @@
           </div>
 
           <div class="accordion__item">
-            <h3 class="accordion__header-container">
+            <h2 class="accordion__header-container">
               <button class="accordion__header"
                       id="accordion-header-2"
                       aria-controls="accordion-panel-2"
@@ -46,7 +46,7 @@
                 <span class="accordion__header-text">How do I protect my computer from malware?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
-            </h3>
+            </h2>
             <section class="accordion__panel"
                      id="accordion-panel-2"
                      aria-labelledby="accordion-header-2"
@@ -56,7 +56,7 @@
           </div>
 
           <div class="accordion__item">
-            <h3 class="accordion__header-container">
+            <h2 class="accordion__header-container">
               <button class="accordion__header"
                       id="accordion-header-3"
                       aria-controls="accordion-panel-3"
@@ -64,7 +64,7 @@
                 <span class="accordion__header-text">Can I recover deleted files from my computer?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
-            </h3>
+            </h2>
             <section class="accordion__panel"
                      id="accordion-panel-3"
                      aria-labelledby="accordion-header-3"
@@ -74,7 +74,7 @@
           </div>
 
           <div class="accordion__item">
-            <h3 class="accordion__header-container">
+            <h2 class="accordion__header-container">
               <button class="accordion__header"
                       id="accordion-header-4"
                       aria-controls="accordion-panel-4"
@@ -82,7 +82,7 @@
                 <span class="accordion__header-text">What is phishing and how can I avoid it?</span>
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
-            </h3>
+            </h2>
             <section class="accordion__panel"
                      id="accordion-panel-4"
                      aria-labelledby="accordion-header-4"
