--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h2>
-            <section class="accordion__panel"
+            <div class="accordion__panel"
                      id="accordion-panel-1"
                      aria-labelledby="accordion-header-1"
                      aria-hidden="true">
               <p class="accordion__panel-text">A virus is a malicious program that can replicate itself and spread to other computers, often causing damage to files and systems. On the other hand, a trojan disguises itself as a legitimate program to trick you into downloading it.</p>
-            </section>
+            </div>
           </div>
 
           <div class="accordion__item">
@@ -47,12 +47,12 @@
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h2>
-            <section class="accordion__panel"
+            <div class="accordion__panel"
                      id="accordion-panel-2"
                      aria-labelledby="accordion-header-2"
                      aria-hidden="true">
               <p class="accordion__panel-text">Protection involves installing and regularly updating antivirus software, being cautious when downloading files or clicking on links, keeping all software up to date, and using strong passwords and two-factor authentication to protect your accounts.</p>
-            </section>
+            </div>
           </div>
 
           <div class="accordion__item">
@@ -65,12 +65,12 @@
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h2>
-            <section class="accordion__panel"
+            <div class="accordion__panel"
                      id="accordion-panel-3"
                      aria-labelledby="accordion-header-3"
                      aria-hidden="true">
               <p class="accordion__panel-text">It depends on how the files were deleted. If they were simply deleted from the recycle bin, they may be recoverable with file recovery software.</p>
-            </section>
+            </div>
           </div>
 
           <div class="accordion__item">
@@ -83,12 +83,12 @@
                 <span class="accordion__icon" aria-hidden="true"></span>
               </button>
             </h2>
-            <section class="accordion__panel"
+            <div class="accordion__panel"
                      id="accordion-panel-4"
                      aria-labelledby="accordion-header-4"
                      aria-hidden="true">
               <p class="accordion__panel-text">Phishing is a scam where attackers try to trick you into giving them sensitive information. To avoid it, double-check sender's email address, look for errors in the message, never click on unknown links or download attachments, and use strong passwords and two-factor authentication.</p>
-            </section>
+            </div>
           </div>
 
         </div>
